# RustyBorg

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  test.sh  test_temp.sh
dockerfiles/: ssh-server.Dockerfile  test.Dockerfile
src/: borg.rs  main.rs
src/borg/: create.rs  errors.rs  init.rs  list.rs  mod.rs  schedule.rs
src/util/: mod.rs  schedule.rs  sshverify.rs
