[package]
name = "rusty_borg"
version = "0.1.1"
edition = "2021"
authors = ["Thomas Phillips contact@thomas-phillips.dev"]
license = "MIT"
repository = "https://github.com/thomas-phillips/RustyBorg"
readme = "README.md"
description = "Tool for simplifying BorgBack"
exclude = ["docker*", "test.sh"]

[dependencies]
borgbackup = "0.9.1"
chrono = "0.4.39"
chrono-tz = "0.10.0"
clap = { version = "4.5.23", features = ["derive"] }
cron = "0.14.0"
daemonize = "0.5.0"
env_logger = "0.11.6"
log = "0.4.22"
rand = "0.8.5"
ssh2 = "0.9.4"
tempfile = "3.15.0"
